--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Unease</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Hello!</h1>
+    <h2>This page is a work in progress! There will be more coming soon!</h2>
 </body>
 </html>
