--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="This is my first solo website so things might be buggy ._.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Unease, UneasePurse37, ItsUnease">
     <title>About Unease</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,3 +13,5 @@
     <h2>This page is a work in progress! There will be more coming soon!</h2>
 </body>
 </html>
+
+<!-- Start by adding a background to the website-->
