Removed Current Interests and bottom border on nav

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="This is my first solo website so things might be buggy ._.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Unease, UneasePurse37, ItsUnease">
-    <title>About Unease</title>
+    <title>Unease</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
@@ -16,16 +16,17 @@
         <ul>
             <li><a class="active" href="">Home Page</a></li>
             <li><a href="">Social Media</a></li>
-            <li><a href="">Current Interests</a></li>
             <li><a href="">Current Projects</a></li>
-            <li><a href="">Github</a></li>
+            <li><a href="https:/github.com/Unease", target=_blank>Github</a></li>
         </ul>
     </div>
     <h1><img src="../images/koharusquare.png" alt="Koharu" class="avatar"> Hello!</h1>
     <h2>This page is a work in progress! There will be more coming soon!</h2>
-    <h3>Hi I'm Unease and this webpage will show in the future a little bit about me<br>
-        and some cool stuff that I've worked on!
+    <h3>Hi, I'm Unease and you may also know me as ItsUnease and formerly as UneasePurse37.<br>
+        Although I don't like being referred to as the latter, I use as a handle as shown on my
+        several of my social media accounts.
     </h3>
+    <p></p>
     </div>
 
 </body>
