Fixed 404 and modified index.html.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     </div>
     <h1><img src="../images/koharusquare.png" alt="Koharu" class="avatar"> Hello!</h1>
     <h2>This page is a work in progress! There will be more coming soon!</h2>
-    <h3>Hi, I'm Unease and you may also know me as ItsUnease and formerly as UneasePurse37.<br>
+    <p>Hi, I'm Unease and you may also know me as ItsUnease and formerly as UneasePurse37.<br>
         Although I don't like being referred to as the latter, I use as a handle as shown on my
-        several of my social media accounts.
-    </h3>
-    <p></p>
+        several of my social media accounts. <br>
+        I'm currently interested in coding lanuages such as Java and the various subsets of C.<br>
+    I'm also interested in Tool-Assisted Speedruns in many games and create TASes myself for Minecraft.<br>
+My favorite games are Majora's Mask and Super Mario Galaxy, although I also enjoy
+other platformers <br> and puzzle games like Picross and Tetris.</p>
     </div>
 
 </body>
