--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a class="active" href="">Home Page</a></li>
             <li><a href="">Social Media</a></li>
             <li><a href="">Current Projects</a></li>
-            <li><a href="https:/github.com/Unease", target=_blank>Github</a></li>
+            <li><a href="https://github.com/Unease", target=_blank>Github</a></li>
         </ul>
     </div>
     <h1><img src="../images/koharusquare.png" alt="Koharu" class="avatar"> Hello!</h1>
